css/main.css
html, body {
  height: 100%;
  font-family: 'Comfortaa';
}

body {
  height: 100%;
  width: 100%;
  margin: 0;
  display: grid;
  grid-template-rows: auto;
  justify-items: center;
  align-items: center;
  animation: fadein 1s linear;
  overflow: hidden;
}

body.scroll-enable {
  overflow: auto;
}

.overlay-animation {
  position: absolute;
  height: 100%;
  width: 100%;
  margin: 0;
  display: grid;
  grid-template-rows: auto;
  justify-items: center;
  align-items: center;
  z-index: 3;
  pointer-events:none;
  opacity: 0;
}

.svg-container {
  position: relative;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

.svg-container img {
  position: absolute;
  top: -9999px;
  bottom: -9999px;
  left: -9999px;
  right: -9999px;
  margin: auto;
  animation: blink 0.2s linear infinite;
}

.svg-container img:nth-child(1) { animation-delay: 0s }
.svg-container img:nth-child(2) { animation-delay: 0.1s }

.landing-page {
  position: absolute;
  height: 100%;
  width: 100%;
  margin: 0;
  display: grid;
  grid-template-rows: auto;
  justify-items: center;
  align-items: center;
  transition: 0.5s ease-out;
  /*animation: pull-down 0.5s;*/
  transform: translateY(0%);
  z-index: 1;
  /*border-bottom: 2px solid black;*/
}

.landing-page.raise {
  transform: translateY(-125%);
}

.landing-page-content {

}

.page {
  position: absolute;
  height: 100%;
  width: 100%;
  margin: 0;
  display: grid;
  grid-template-rows: auto;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.5s 0.5s;
  visibility: none;
  overflow: hidden;
}

.page.show {
  opacity: 1;
  transition: opacity 0.5s 0s;
  overflow: auto;
  pointer-events: auto;
}

.title {
  position: relative;
  
  display: grid;
  text-align: center;
  justify-items: center;
  align-items: center;
  cursor: default;
  z-index: 5;
}

.name {
  transition: 0.1s;
  text-shadow: lightgray 2px 2px;
}

.name:hover {
  transform: translateY(2px) translateX(2px);
  text-shadow: 0px 0px;
}

.profile-pic {
  border-radius: 50%;
  height: 128px;
  width: 128px;
  border: 2px solid black;
  transition: 0.1s;
  pointer-events: none;
  user-select: none;
  z-index: 6;
}

/*.profile-pic:hover {
  position: fixed
  top: -9999px;
  bottom: -9999px;
  left: -9999px;
  right: -9999px;
  margin: auto;

  animation: grow 0.1s 4s;
  animation-fill-mode: forwards;
  content:url("../assets/laser_eyes.png");
}*/

.profile-pic.play {
  position: fixed
  top: -9999px;
  bottom: -9999px;
  left: -9999px;
  right: -9999px;
  margin: auto;

  animation: grow 0.1s 4s;
  animation-fill-mode: forwards;
  content:url("../assets/laser_eyes.png");
}


.grow-animation {
  height: 138px;
  width: 138px;
  transition: 0.1s;
  user-select: none;
  z-index: 6;
}

.grow-animation:hover {
  transform: scale(0.975) translateY(5px) translateX(5px);
}

.rotate-animation {
  height: 128px;
  width: 128px;
  border-radius: 50%;
  transition: 0.5s;
  box-shadow: 5px 10px lightgray;
  user-select: none;
  z-index: 6;
}

.rotate-animation:hover {
  transform: rotate(15deg);
}

.rotate-animation.play {
  transform: rotate(15deg);
}

.hover-animation {
  height: 138px;
  width: 138px;
  animation: float 2.5s linear infinite;
  user-select: none;
  z-index: 6;
}

.hover-animation:hover {
  animation: shake 0.5s linear infinite;
}

.hover-animation.play {
  animation: shake 0.5s linear infinite;
}

.cover {
  display: none;
  position: absolute;
  background: white;
  width: 100%;
  bottom: 0;
  animation: shrink 1s linear;
}

.links {
  display: flex;
  flex-direction: row;
}

.btn-link {
  display: flex;
  width: 128px;
  height: 32px;
  margin: 10px;
  justify-items: center;
  align-items: center;
  border: 2px solid black;
  
  background: white;
  box-shadow: 5px 5px;
  transition: 0.1s;
  transform: translateY(-5px) translateX(-5px);

  cursor: pointer;
}

.btn-link:hover {
  box-shadow: 2px 2px;
  transform: translateY(-2px) translateX(-2px);
}

.btn-link > span {
  margin: auto;
}

.page-1 {
  width: 100%;
}

.about-container {
  width: 75%;
  margin: 128px auto;
  font-size: 20pt;
}

.projects-container {
  width: 75%;
  margin: 128px auto;
  font-size: 16pt;
}

.resume-container {
  width: 75%;
  margin: 128px auto;
  font-size: 32pt;
}

.page-3 {
}

.resume-doc {
  height: 1104px;
  width: 816px;
}

.resume-links {
  display: flex;
  flex-direction: column;
  font-size: 36pt;
}

.resume-links > a {
  cursor: pointer;
  text-decoration: none;
  transition: 0.1s;
  margin-right: auto;
}

.resume-links > a:hover {
  transform: scale(1.025) translateX(12px);
}

.media-links {
  display: flex;
  flex-direction: row;
  cursor: pointer;
}

.media-links > a {
  padding: 3px;
  margin-right: 12px;
  text-decoration: none;
  transition: 0.1s;
  box-shadow: 0px 0px;
  color: black;
}

.media-links > a:hover {
  transform: scale(1.1);
}

@media (max-width: 700px) {
  .about-container {
    width: 90%;
    margin: 128px 12px;
    font-size: 18pt;
  }
  
  .projects-container {
    width: 90%;
    margin: 128px 12px;
  }
  
  .resume-container {
    width: 90%;
    margin: 128px 12px;
  }

  .btn-play {
    display: none;
  }

  .btn-play.show {
    display: none;
  }

  .resume-links {
    font-size: 20pt;
  }

  .media-links {
    font-size: 20pt;
    flex-direction: column;
  }

}

.monkas-container {
  position: fixed;
  height: 128px;
  width: 128px;
  left: -128px;
  bottom: 0px;
  z-index: 20;
  transition: 0.1s linear;
  transform: translateX(0px);
}

.monkas-container.show {
  /*animation: pop-in-right 4s 1.5s;*/
  transition: 2s 0.25s linear;
  transform: translateX(116px);
}

.home-arrow {
  position: fixed;
  height: 32px;
  width: 32px;
  right: 48px;
  top: -192px;
  padding: 128px 6px 3px 3px;

  transition: 0.25s;
  
  z-index: 25;
  opacity: 0;
  pointer-events: none;

  background: white;
  border-style: solid;
  border-width: 0px 2px 2px 2px;
  box-shadow: 5px 5px;

}

.home-arrow:hover {
  transition-delay: 0s;
  transform: translateY(12px);
}
/* ... */

